fix place-items not working correctly on firefox (firefox is strict about the spec where chrome was being lenient)

--- a/src/public/includes/css/main.css
+++ b/src/public/includes/css/main.css
@@ -482,8 +482,8 @@ ol#subMenu {
 }
 
 .ticketButtons {
+    display: grid;
 	place-items: start;
-
 }
 
 .ticketButtons>div {
